--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sanity": "^3.36.3"
   },
   "devDependencies": {
+    "@portabletext/react": "^3.0.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
