--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/karla": "^5.0.19",
+    "@fontsource/lato": "^5.0.20",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
     "@sanity/vision": "^3.36.3",
     "next": "14.1.4",
     "next-sanity": "^8.5.0",
