--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@sanity/vision": "^3.36.3",
+    "moment": "^2.30.1",
     "next": "14.1.4",
     "next-sanity": "^8.5.0",
     "react": "^18",
